--- a/packages/index.html
+++ b/packages/index.html
@@ -11,14 +11,23 @@
 		/>
 		<link rel="stylesheet" href="../shared.css" />
 		<link rel="stylesheet" href="packages.css" />
+		<script src="../shared.js" defer></script>
 	</head>
 
 	<body>
 		<div class="backdrop"></div>
 		<header class="main-header">
 			<div>
+				<button class="toggle-button">
+					<span class="toggle-button__bar"></span>
+					<span class="toggle-button__bar"></span>
+					<span class="toggle-button__bar"></span>
+				</button>
 				<a href="../index.html" class="main-header__brand">
-					<img src="../images/uhost-icon.png" alt="uHost - Your favorite hosting company">
+					<img
+						src="../images/uhost-icon.png"
+						alt="uHost - Your favorite hosting company"
+					/>
 				</a>
 			</div>
 			<nav class="main-nav">
@@ -35,6 +44,19 @@
 				</ul>
 			</nav>
 		</header>
+		<nav class="mobile-nav">
+			<ul class="mobile-nav__items">
+				<li class="mobile-nav__item">
+					<a href="index.html">Packages</a>
+				</li>
+				<li class="mobile-nav__item">
+					<a href="../customers/index.html">Customers</a>
+				</li>
+				<li class="mobile-nav__item mobile-nav__item--cta">
+					<a href="../start-hosting/index.html">Start Hosting</a>
+				</li>
+			</ul>
+		</nav>
 		<main>
 			<div class="background"></div>
 			<section class="package" id="plus">
