--- a/customers/index.html
+++ b/customers/index.html
@@ -7,7 +7,7 @@
 		<title>uHost Customers</title>
 		<link rel="shortcut icon" href="../images/favicon.png" />
 		<link
-			href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700"
+			href="https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="../shared.css" />
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-        <div class="backdrop"></div>
+		<div class="backdrop"></div>
 		<header class="main-header">
 			<div>
 				<button class="toggle-button">
