--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>uHost</title>
 		<link rel="shortcut icon" href="/images/favicon.png" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="shared.css" />
