--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>uHost</title>
-		<link rel="shortcut icon" href="/images/favicon.png" />
+		<link rel="shortcut icon" href="images/favicon.png" />
 		<link rel="stylesheet" href="shared.css" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="shared.js" defer></script>
